--- a/Index.html
+++ b/Index.html
@@ -13,35 +13,48 @@
 </head>
 
 <body>
+    <section class="section-how">
+        <div class="container">
+            <span class="subheading">How it Works</span>
+            <h2 class="secondry__heading">Your daily dose of health in simple 3 steps</h2>
 
-    <section class="section-hero">
-        <div class="hero container grid grid--2x1">
-            <div class="hero__text__box">
-                <h1>A healthy meal delivered to your door, every single day</h1>
-                <p class="hero__description">The smart 365-days-per-year food subscription that will make you eat
-                    healthy
-                    again. Tailored to your personal tastes and nutritional needs. </p>
-
-                <a href="#" class="btn btn--full margin__right">Start eating well</a>
-                <a href="#" class="btn btn--outline">Learn more &rarr;</a>
-
-                <div class="meal__delivered">
-                    <div class="customer__pics">
-                        <img src="/img/customers/customer-1.jpg" alt="Customers Faces">
-                        <img src="/img/customers/customer-2.jpg" alt="Customers Faces">
-                        <img src="/img/customers/customer-3.jpg" alt="Customers Faces">
-                        <img src="/img/customers/customer-4.jpg" alt="Customers Faces">
-                        <img src="/img/customers/customer-5.jpg" alt="Customers Faces">
-                        <img src="/img/customers/customer-6.jpg" alt="Customers Faces">
+            <div class="steps grid">
+                <div class="step__box grid grid--1x2">
+                    <div class="step__text__box">
+                        <p class="step__number">01</p>
+                        <h3 class="tertiary__heading">Tell us what you like (and what not)</h3>
+                        <p class="step__description"> Never again waste time thinking about what to eat! Omnifood AI
+                            will
+                            create a 100% personalized weekly meal plan just for you. It makes sure you get all the
+                            nutrients and vitamins you need, no matter what diet you follow!</p>
                     </div>
-                    <div class="deliverd__text"> <span>250,000+</span> meals delivered last year!</div>
+                    <div class="step__image__box"><img src="/img/app/app-screen-1.png" alt="" class="step__image"></div>
+                </div>
+                <div class="step__box grid grid--1x2">
+                    <div class="step__text__box">
+                        <p class="step__number">02</p>
+                        <h3 class="tertiary__heading">Approve your weekly meal plan</h3>
+                        <p class="step__description"> Once per week, approve the meal plan generated for you by Omnifood
+                            AI. You can change ingredients, swap entire meals, or even add your own recipes.</p>
+                    </div>
+                    <div class="step__image__box"><img src="/img/app/app-screen-2.png" alt="" class="step__image"></div>
+                </div>
+                <div class="step__box grid grid--1x2">
+                    <div class="step__text__box">
+                        <p class="step__number">03</p>
+                        <h3 class="tertiary__heading">Receive meals at convenient time</h3>
+                        <p class="step__description"> Best chefs in town will cook your selected meal every day, and we
+                            will deliver it to your door whenever works best for you. You can change delivery schedule
+                            and address daily!</p>
+                    </div>
+                    <div class="step__image__box"><img src="/img/app/app-screen-2.png" alt="" class="step__image"></div>
                 </div>
             </div>
-            <div class="hero__img__box">
-                <img src="/img/hero.png" alt="Woman enjoying food" class="hero__img">
-            </div>
+
         </div>
+
     </section>
+
 
 
 
