--- a/Index.html
+++ b/Index.html
@@ -13,52 +13,11 @@
 </head>
 
 <body>
-    <section class="section-how">
-        <div class="container">
-            <span class="subheading">How it Works</span>
-            <h2 class="secondry__heading">Your daily dose of health in simple 3 steps</h2>
-
-            <div class="steps grid">
-                <div class="step__box grid grid--1x2">
-                    <div class="step__text__box">
-                        <p class="step__number">01</p>
-                        <h3 class="tertiary__heading">Tell us what you like (and what not)</h3>
-                        <p class="step__description"> Never again waste time thinking about what to eat! Omnifood AI
-                            will
-                            create a 100% personalized weekly meal plan just for you. It makes sure you get all the
-                            nutrients and vitamins you need, no matter what diet you follow!</p>
-                    </div>
-                    <div class="step__image__box"><img src="/img/app/app-screen-1.png" alt="" class="step__image"></div>
-                </div>
-                <div class="step__box grid grid--1x2">
-                    <div class="step__text__box">
-                        <p class="step__number">02</p>
-                        <h3 class="tertiary__heading">Approve your weekly meal plan</h3>
-                        <p class="step__description"> Once per week, approve the meal plan generated for you by Omnifood
-                            AI. You can change ingredients, swap entire meals, or even add your own recipes.</p>
-                    </div>
-                    <div class="step__image__box"><img src="/img/app/app-screen-2.png" alt="" class="step__image"></div>
-                </div>
-                <div class="step__box grid grid--1x2">
-                    <div class="step__text__box">
-                        <p class="step__number">03</p>
-                        <h3 class="tertiary__heading">Receive meals at convenient time</h3>
-                        <p class="step__description"> Best chefs in town will cook your selected meal every day, and we
-                            will deliver it to your door whenever works best for you. You can change delivery schedule
-                            and address daily!</p>
-                    </div>
-                    <div class="step__image__box"><img src="/img/app/app-screen-2.png" alt="" class="step__image"></div>
-                </div>
-            </div>
-
-        </div>
 
     </section>
 
-
-
-
-
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
 
 
